--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -276,17 +276,27 @@ html {
   padding: 0;
 }
 
-.main {
+.body {
+  overflow-x: hidden;
+  overflow-y: hidden;
   font-size: 125%;
   color: #48484a;
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgb(254, 238, 226);
+  font-family: "Josefin Sans", sans-serif;
+}
+
+.main {
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
   position: relative;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
   background-color: rgb(254, 238, 226);
-  font-family: "Josefin Sans", sans-serif;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 .main .wrapper {
   display: -webkit-box;
@@ -322,6 +332,7 @@ html {
   top: -1px;
   right: 23%;
   width: 17%;
+  opacity: 0.82;
 }
 
 .topContainer {
@@ -699,14 +710,16 @@ a:visited {
 }
 
 @media (max-width: 1100px) {
-  .main {
+  body {
     overflow-y: visible;
+  }
+  body .main {
     height: auto;
   }
-  .main .puffin {
+  body .main .puffin {
     bottom: -32px;
   }
-  .main .bobby {
+  body .main .bobby {
     bottom: -32px;
   }
 
@@ -766,8 +779,8 @@ a:visited {
   }
 }
 @media (max-width: 670px) {
-  .main {
-    overflow-y: visible;
+  .main .frigate {
+    display: none;
   }
   .main .wrapper {
     width: 85%;
@@ -783,7 +796,6 @@ a:visited {
   }
 
   .birdhouseContainer {
-    scroll-behavior: touch;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     height: 100%;
@@ -823,6 +835,13 @@ a:visited {
     font-size: 1.5rem;
     width: 90%;
   }
+
+  body .main .puffin {
+    bottom: 0;
+  }
+  body .main .bobby {
+    bottom: 0;
+  }
 }
 @media (max-width: 570px) {
   .main .topContainer h1 {
@@ -831,9 +850,20 @@ a:visited {
 }
 @media (max-width: 480px) {
   .header .titleContainer h1 {
-    font-size: 1.8rem;
+    font-size: 4rem;
   }
   .header .titleContainer h1 span {
     font-size: 1rem;
+  }
+
+  .form {
+    margin-bottom: 2.2rem;
+  }
+  .form input[type=text]:hover, .form input[type=text]:focus {
+    width: inherit;
+  }
+
+  .weatherContainer .weatherContent {
+    padding: 2rem 1.7rem 2rem 1.8rem;
   }
 }
